# ChromatinTrek

./: README.md  Snakefile  config.yaml  environment.yaml  pyproject.toml  samples.tsv
chromatintrek/: __init__.py  alignment.py  cli.py  genome.py  go_enrichment.py  motif_tf.py  peak_calling.py  peak_gene.py  peak_visualization.py  qc.py  utils.py
chromatintrek.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
demo/: generate_demo_data.py  generate_demo_figures.py
profiles/slurm/: config.yaml
rules/: align.smk  go.smk  motif.smk  peak_gene.smk  peaks.smk  qc.smk  visualize.smk
